--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,9 @@
+/*
+ * MIT License
+ * Copyright (c) 2025 github.com/paul356
+ * See LICENSE file for full license text
+ */
+
 :root {
     --primary-color: #4a90e2;
     --primary-hover: #357abd;
